--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "cryptod3",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.binance.com",
+  
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -36,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
